crates/nidus-sqlx/tests/ui/sqlx_provider_typed_registration.stderr
error[E0277]: the trait bound `SqlitePoolProvider: ProviderRegistrant` is not satisfied
 --> tests/ui/sqlx_provider_typed_registration.rs:6:27
  |
6 |         .provider_typed::<SqlitePoolProvider>()
  |          --------------   ^^^^^^^^^^^^^^^^^^ the trait `ProviderRegistrant` is not implemented for `SqlitePoolProvider`
  |          |
  |          required by a bound introduced by this call
  |
note: required by a bound in `ModuleBuilder::provider_typed`
 --> $WORKSPACE/crates/nidus-core/src/module/mod.rs
  |
  |     pub fn provider_typed<P>(mut self) -> Self
  |            -------------- required by a bound in this associated function
  |     where
  |         P: ProviderRegistrant,
  |            ^^^^^^^^^^^^^^^^^^ required by this bound in `ModuleBuilder::provider_typed`
