crates/nidus-sqlx/tests/ui/sqlx_provider_typed_registration.rs
use nidus_core::ModuleBuilder;
use nidus_sqlx::SqlitePoolProvider;

fn main() {
    let _module = ModuleBuilder::new("DatabaseModule")
        .provider_typed::<SqlitePoolProvider>()
        .build();
}
